--- a/RandomQuoteGenerator/index.css
+++ b/RandomQuoteGenerator/index.css
@@ -1,37 +1,45 @@
-h1{
-    color:black
+.info{
+    background-color:lightblue;
+    padding:1%;
+    max-height:20%;
+  }
+  .info h1{
+    text-align:center;
+  }
+  .info h5{
+    text-align:center;
   }
   
   body{
-    background-color:#E0F7FA;
+    background-color:whitesmoke;
   }
   
-  .container{
-   margin-left:180px; 
-   margin-right:180px;
-   margin-top:120px;
-   font-size:22px; 
+  .content{  
+    padding-left:9%;
+    padding-right:9%;
+    margin-top:9%;
+    margin-bottom:4%;
+    max-height:40%;
+    font-size:105%;
   }
-  
   button {
-      position:fixed;
-      background-color: #4CAF50;
-      margin-top:60px;
-      margin-left:350px;
-      border: none;
-      color: white;
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
+    position:fixed;
+      margin-left:62%;
+      padding:0.8%;
+      padding-right:4%;
+      padding-left:4%;
+      background-color:lightblue;
+      font-weight:400;
+      border-style:solid;
+      border-width:1px;
+      border-color:blue;
   }
-  .footer {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 1rem;
-    background-color: #efefef;
-    text-align: center;
+  footer {
+   position:fixed;
+    bottom:0%;
+    background-color:lightblue;
+    width:100%;
+    max-height:20%;
+    padding:1%;
+    text-align:center;
   }
