--- a/RandomQuoteGenerator/index.css
+++ b/RandomQuoteGenerator/index.css
@@ -1,45 +1,47 @@
 .info{
-    background-color:lightblue;
-    padding:1%;
-    max-height:20%;
-  }
-  .info h1{
-    text-align:center;
-  }
-  .info h5{
-    text-align:center;
-  }
-  
-  body{
-    background-color:whitesmoke;
-  }
-  
-  .content{  
-    padding-left:9%;
-    padding-right:9%;
-    margin-top:9%;
-    margin-bottom:4%;
-    max-height:40%;
-    font-size:105%;
-  }
-  button {
+  background-color:lightblue;
+  padding:1%;
+  max-height:20%;
+}
+.info h1{
+  text-align:center;
+}
+.info h5{
+  text-align:center;
+}
+
+body{
+  background-color:whitesmoke;
+}
+
+.content{  
+  padding-left:9%;
+  padding-right:9%;
+  margin-top:16%;
+  margin-bottom:4%;
+  max-height:40%;
+  font-size:105%;
+}
+button {
     position:fixed;
-      margin-left:62%;
-      padding:0.8%;
-      padding-right:4%;
-      padding-left:4%;
-      background-color:lightblue;
-      font-weight:400;
-      border-style:solid;
-      border-width:1px;
-      border-color:blue;
-  }
-  footer {
-   position:fixed;
-    bottom:0%;
+    margin-top:5%;
+    margin-left:35%;
+    padding:0.8%;
+    padding-right:4%;
+    padding-left:4%;
+    color:black;
     background-color:lightblue;
-    width:100%;
-    max-height:20%;
-    padding:1%;
-    text-align:center;
-  }
+    font-weight:400;
+    border-style:solid;
+    border-width:1px;
+    border-color:blue;
+}
+footer {
+ position:fixed;
+  bottom:0%;
+  background-color:lightblue;
+  width:100%;
+  max-height:20%;
+  padding:1%;
+  text-align:center;
+}
