Modifying the Background Color

--- a/JavaScriptCalculator/index.css
+++ b/JavaScriptCalculator/index.css
@@ -22,7 +22,7 @@ body{
    }
    
    #calc{
-     background-color:gray;
+     background-color:lightslategray;
      width:250px;
      height:350px;
      border:1px solid black;
