--- a/JS-Tic-Tac-Toe/index.css
+++ b/JS-Tic-Tac-Toe/index.css
@@ -1,4 +1,5 @@
 .gameBoard{
+    /*background-color: red;*/
        width:372px;
        height: 372px;
        margin:  auto;
@@ -7,6 +8,7 @@
 }
 
 row {
+   /* background-color:Blue;*/
     clear:both;
     overflow:hidden;
     margin:  auto;
@@ -29,6 +31,7 @@ row {
 
 .ex{
  background-color:white;   
+  margin:1%;
 }
 
 .oh{
@@ -43,25 +46,21 @@ body {
     -o-background-size: cover;
     background-size: cover;
 }
-.info h1{
-    text-align: center;
-    padding: 1%;
-    color: white;
-    font: 400% Georgia, "Bitstream Charter", "URW Bookman L", "Century Schoolbook L", serif;   
-}
 
 .spacer {
+  padding: 1%;
   text-align: center;
-  text-shadow: 1px 1px 2px black, 0 0 1em black;
+  text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
    color: white;
-   font: 200% Georgia, "Bitstream Charter", "URW Bookman L", "Century Schoolbook L", serif;
+   font: 3em Georgia, "Bitstream Charter", "URW Bookman L", "Century Schoolbook L", serif;
   
 }
 
 .btn{
       text-align: center;
-      box-shadow: 2px 2px 8px #000; 
- 
+      -moz-box-shadow: 8px 8px 15px #000; 
+ -webkit-box-shadow: 8px 8px 15px #000; 
+ box-shadow: 8px 8px 15px #000; 
 
-      
+     
 } 
